feat: update current backend implementation